ready to deploy

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon",
     "in": "yarn --ignore-engines",
     "db": "node dist/init.js",
-    "build": "tsc",
-    "deposit": "node dist/src/deposit.js",
-    "withdraw": "node dist/src/withdraw.js",
-    "index:deposit": "node dist/src/recieverDeposit.js",
-    "index:withdraw": "node dist/src/recieverWithdraw.js",
-    "server": "node dist/src/server.js"
+    "build": "rimraf dist && tsc",
+    "deposit": "node dist/deposit.js",
+    "withdraw": "node dist/withdraw.js",
+    "index:deposit": "node dist/recieverDeposit.js",
+    "index:withdraw": "node dist/recieverWithdraw.js",
+    "start": "node dist/main.js",
+    "server": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@types/node-fetch": "^2.6.10",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.1",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typechain": "^8.3.2",
