--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "sourceMap": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "skipLibCheck": true
-    // "noImplicitAny":false
-  }
+    "skipLibCheck": true,
+    "noImplicitAny": false
+  },
+  "include": [
+    "src/**/*" // Include all TypeScript files in the src directory
+  ]
 }
-
