--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ L2_CHAIN_ID = 10
 
 L2_STANDARD_BRIDGE_ADDRESS = 0x4200000000000000000000000000000000000010
 L2_STANDARD_BRIDGE_BLOCK_CREATED = 0
+
+PORT = 3000
