--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.6.5",
     "big.js": "^6.2.1",
     "bignumber.js": "^4.0.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethereum-abi-types-generator": "^1.3.4",
     "ethers": "5.7.2",
